--- a/style.css
+++ b/style.css
@@ -1,4 +1,71 @@
+/* Reset styles */
+*,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+}
+ul,
+ol,
+li {
+    list-style: none;
+}
+img {
+    vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: inherit;
+    font-size: inherit;
+}
+html,
 body {
+    height: 100%;
+    line-height: 1;
+    font-size: 14px;
+    background-color: #fff;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    background: #b5ab8a;
+}
+
+.wrapper {
+    padding: 30px;
+    min-height: 100%;
+}
+
+.title {
+    text-align: center;
+    font-size: 80px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #4f553d;
+    margin-bottom: 30px;
+}
+
+.image-slider {
+    padding: 30px 0 70px 0;
+}
+
+.image-slider__image {
+    text-align: center;
+}
+
+.image-slider__image img {
+    max-width: 100%;
+}
+
+
+
+/* body {
     font-size: 10;
     margin: 0;
     padding: 0;
@@ -125,4 +192,4 @@ body {
 
 #radio6:checked ~ .navigation-auto .auto-btn6 {
     background: #586338;
-}
+} */
