--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ h6 {
 }
 html,
 body {
-    height: 100%;
+    height: 100vh;
     line-height: 1;
-    font-size: 14px;
-    background-color: #fff;
+    font-size: 14px; 
+    /* background-color: #fff; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     background: #b5ab8a;
 }
@@ -48,7 +48,7 @@ body {
     font-weight: 700;
     text-transform: uppercase;
     color: #4f553d;
-    margin-bottom: 30px;
+    /* margin-bottom: 1.875rem; */
 }
 
 .image-slider {
@@ -60,8 +60,36 @@ body {
 }
 
 .image-slider__image img {
+    height: 80vh;
     max-width: 100%;
+    border-radius: 3%;
 }
+
+.image-slider .swiper-button-prev::after,
+.image-slider .swiper-button-next::after {
+    color: #4f553d;
+    font-size: 80px;
+}
+
+.image-slider .swiper-pagination {
+    bottom: 0px;
+}
+
+.image-slider .swiper-pagination-bullet {
+    width: 20px; 
+    height: 20px;
+    line-height: 20px;
+    font-size: 20px;
+    border: 3px solid #586338;
+    background-color: #4f553d;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    transition: 2s; 
+}
+
+
+
 
 
 
